@@ -37,7 +37,12 @@ int Mono_Posix_FromFcntlCommand (int value, int* rval);
 int Mono_Posix_FromFilePermissions (unsigned int value, unsigned int* rval);
 int Mono_Posix_FromLockType (short value, short* rval);
 int Mono_Posix_FromLockfCommand (int value, int* rval);
+int Mono_Posix_FromMlockallFlags (int value, int* rval);
+int Mono_Posix_FromMmapFlags (int value, int* rval);
+int Mono_Posix_FromMmapProt (int value, int* rval);
 int Mono_Posix_FromMountFlags (guint64 value, guint64* rval);
+int Mono_Posix_FromMremapFlags (guint64 value, guint64* rval);
+int Mono_Posix_FromMsyncFlags (int value, int* rval);
 int Mono_Posix_FromOpenFlags (int value, int* rval);
 int Mono_Posix_FromPathConf (int value, int* rval);
 int Mono_Posix_FromPollEvents (short value, short* rval);
@@ -134,7 +139,15 @@ int Mono_Posix_Syscall_lockf (int fd, int cmd, gint64 len);
 gint64 Mono_Posix_Syscall_lseek (int fd, gint64 offset, int whence);
 int Mono_Posix_Syscall_lsetxattr (const char* path, const char* name, void* value, guint64 size, int flags);
 int Mono_Posix_Syscall_lstat (const char* file_name, struct Mono_Posix_Stat* buf);
+int Mono_Posix_Syscall_mincore (void* start, guint64 length, void* vec);
 int Mono_Posix_Syscall_mknod (const char* pathname, unsigned int mode, guint64 dev);
+int Mono_Posix_Syscall_mlock (void* start, guint64 len);
+void* Mono_Posix_Syscall_mmap (void* start, guint64 length, int prot, int flags, int fd, gint64 offset);
+int Mono_Posix_Syscall_mprotect (void* start, guint64 len, int prot);
+void* Mono_Posix_Syscall_mremap (void* old_address, guint64 old_size, guint64 new_size, guint64 flags);
+int Mono_Posix_Syscall_msync (void* start, guint64 len, int flags);
+int Mono_Posix_Syscall_munlock (void* start, guint64 len);
+int Mono_Posix_Syscall_munmap (void* start, guint64 length);
 int Mono_Posix_Syscall_open (const char* pathname, int flags);
 int Mono_Posix_Syscall_open_mode (const char* pathname, int flags, unsigned int mode);
 gint64 Mono_Posix_Syscall_pathconf (const char* path, int name);
@@ -148,6 +161,7 @@ gint64 Mono_Posix_Syscall_read (int fd, void* buf, guint64 count);
 int Mono_Posix_Syscall_readdir (void* dir, struct Mono_Posix_Syscall__Dirent* dentry);
 int Mono_Posix_Syscall_readdir_r (void* dirp, struct Mono_Posix_Syscall__Dirent* entry, void** result);
 int Mono_Posix_Syscall_readlink (const char* path, char* buf, guint64 bufsiz);
+int Mono_Posix_Syscall_remap_file_pages (void* start, guint64 size, int prot, gint64 pgoff, int flags);
 int Mono_Posix_Syscall_seekdir (void* dir, gint64 offset);
 gint64 Mono_Posix_Syscall_sendfile (int out_fd, int in_fd, gint64* offset, guint64 count);
 int Mono_Posix_Syscall_setdomainname (const char* name, guint64 len);
@@ -178,7 +192,12 @@ int Mono_Posix_ToFcntlCommand (int value, int* rval);
 int Mono_Posix_ToFilePermissions (unsigned int value, unsigned int* rval);
 int Mono_Posix_ToLockType (short value, short* rval);
 int Mono_Posix_ToLockfCommand (int value, int* rval);
+int Mono_Posix_ToMlockallFlags (int value, int* rval);
+int Mono_Posix_ToMmapFlags (int value, int* rval);
+int Mono_Posix_ToMmapProt (int value, int* rval);
 int Mono_Posix_ToMountFlags (guint64 value, guint64* rval);
+int Mono_Posix_ToMremapFlags (guint64 value, guint64* rval);
+int Mono_Posix_ToMsyncFlags (int value, int* rval);
 int Mono_Posix_ToOpenFlags (int value, int* rval);
 int Mono_Posix_ToPathConf (int value, int* rval);
 int Mono_Posix_ToPollEvents (short value, short* rval);
